<?xml version="1.0"?>
<package format="2">
  <name>semantic_reconstruction</name>
  <version>0.0.1</version>
  <description>The IML semantic reconstruction package</description>

  <maintainer email="rizhaoq2@illinois.edu">yu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz_visual_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
</package>
