add_executable(voxel_mem_test voxel_mem_test.cu)
target_link_libraries(voxel_mem_test PRIVATE tsdf_utils gtest gtest_main)
gtest_discover_tests(voxel_mem_test)

add_executable(voxel_hash_test voxel_hash_test.cu)
target_link_libraries(voxel_hash_test PRIVATE tsdf_utils gtest gtest_main)
gtest_discover_tests(voxel_hash_test)

